	- added filter_unprintable() to common.c/.h
	- filter unprintable characters before writing to XML
	- added mrt_array and append_to_array() to common.c/.h
	- added "noreturn" attribute to cleanup_and_exit() and removed unnecessary hack to silence compiler from main()
	- added missing static to some global variables
	- added option "no_execution" to perform testruns without executing the binaries
	- added device_slot to image_entry and set it in read_softlist_entry()
	- added missing xmlCleanupParser() call in cleanup_and_exit()
	- updated WARNINGS in makefile and added clang-specific ones
	- removed unnecessary global variable listxml_output
	- moved get_xpath_nodeset() from mame_regtest.c to common.c/.h
	- suppress Linux/Unix-related messages in stdout by using SDL dummy drivers for video and audio
	- removed pngcmp binary and source since it is not part of official MAME/MESS
	- added device_part to image_entry
	- part names are now read from softwarelists and used for execution ("part<num>" is not being added to output files and folders)
	- all parts of a softwarelist entry are now being run with "use_softwarelist" set to 1
	- added support for running the first softwarelist entry for each available slot when "use_softwarelist" is set to 3
	- added mrt_setenv() to common.c/.h
	- replaced putenv calls with mrt_setenv()
	- increased size of slot_info.slotoptions to 512 to avoid buffer overflow with internal nes slots in MESS
	- enabled AddressSanitizer and UndefinedBehaviorSanitizer with clang always
	
	create_report
	- pass the file descriptor as parameter to PRINT_INFO
	- improved layout of comparison report
	- removed option "ignore_exitcode_4" and always filter the mandatory device messages
	- filter unprintable characters from input XMLs
	- improved summary a bit
	- "called within reset scope by" errors did not include stderr
	- added hard-coded "runtime error:" reporting for now (only generated by UndefinedBehaviorSanitizer)